# stdinout-proxy

./: Cargo.toml  README.md
mock-client/: Cargo.toml
mock-client/src/: main.rs
src/: daemon_handle.rs  error.rs  main.rs  server.rs
