[package]
name = "stdinout-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stdinout-proxy"
path = "src/main.rs"

[workspace]
members = ["mock-client"]

[dependencies]
axum = { version = "0", features = ["query"] }
axum-auth = { version = "0", features = ["auth-bearer"] }
clap = { version = "4", features = ["derive"]}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rust_decimal = "1"
thiserror = { workspace = true }
tokio = { workspace = true }

[workspace.dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }