[package]
name = "stdinout-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stdinout-proxy"
path = "src/main.rs"

[workspace]
members = ["mock-client"]

[dependencies]
rfprop = { git = "https://github.com/JayKickliter/Signal-Server.git", branch = "jsk/de-pointer-isze" }
axum = { version = "0", features = ["query"] }
axum-auth = { version = "0", features = ["auth-bearer"] }
clap = { version = "4", features = ["derive"]}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rust_decimal = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
rust_decimal_macros = "1.29.1"
futures-util = "0.3.28"
h3o = "0.3.2"

[workspace.dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }
