[package]
name = "stdinout-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stdinout-proxy"
path = "src/main.rs"

[workspace]
members = ["mock-client"]

[dependencies]
axum = { version = "0", features = ["query"] }
axum-auth = { version = "0", features = ["auth-bearer"] }
clap = { version = "4", features = ["derive"]}
futures-util = "0.3.28"
h3o = "0.3.2"
rayon = "*"
rfprop = { git = "https://github.com/JayKickliter/Signal-Server.git", branch = "jsk/add-bsdf-v0" }
rust_decimal = "1"
rust_decimal_macros = "1.29.1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = { workspace = true }
tokio = { workspace = true }

[workspace.dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
debug = true
